--- a/portfolio.html
+++ b/portfolio.html
@@ -38,49 +38,49 @@
      <section>
          <ul>
              <li>
-                 <img src="" alt="">
-                 <h2></h2>
-                 <p></p>
+                 <img src="./images/portfolio_img_1.jpg" alt="Ноутбук с изображением команды" width="370" height="294">
+                 <h2>Технокряк</h2>
+                 <p>Веб-сайт</p>
              </li>
              <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_2.jpg" alt="Постер New Orlean vs Golden Star"  width="370" height="294">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_3.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_4.jpg" alt="Наушники" width="370" height="294">
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_5.jpg" alt="Коробки" width="370" height="294">
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_6.jpg" alt="Монитор с изображением Веб-сайта" width="370" height="294">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_7.jpg" alt="Издание Limited Edition" width="370" height="294">
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_8.jpg" alt="Етикетка с надписью LABEL TAG" width="370" height="294">
+                <h2>Проект LAB</h2>
+                <p>Дизайн</p>
             </li>
             <li>
-                <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                <img src="./images/portfolio_img_9.jpg" alt="Розробка приложения Growing Business" width="370" height="294">
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
             </li>
          </ul>
      </section>
