--- a/index.html
+++ b/index.html
@@ -12,81 +12,81 @@
 </head>
 <body>
 <!--Шапка страницы-->
-<header>
-    <a href="">WebStudio</a>
-    <nav>
-        <ul>
-       <li><a href="">Студия</a></li>
-       <li><a href="">Портфолио</a></li>
-       <li><a href="">Контакты</a></li>
+<header class="header">
+    <a  class="link header-logo" href="index.html"><span class="logo-span">Web</span>Studio</a>
+    <nav class="header-nav">
+        <ul class="list header-list">
+       <li class="header-item"><a href="index.html" class="link header-link">Студия</a></li>
+       <li class="header-item"><a href="portfolio.html" class="link header-link">Портфолио</a></li>
+       <li class="header-item"><a href="" class="link header-link">Контакты</a></li>
         </ul>
     </nav>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="list header-contact-list">
+        <li class="header-contact-item"><a href=" mailto:info@devstudio.com" class="link header-contact-mail">info@devstudio.com</a></li>
+        <li class="header-contact-item"><a href="tel:+380961111111" class="link header-contact-tel">+38 096 111 11 11</a></li>
     </ul>
     
 </header>
 <!--Основная часть-->
 <main>
     <!--Секция с кнопкой-->
-    <section>
-    <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button"> Заказать услугу</button>
+    <section class="hero">
+    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button"> Заказать услугу</button>
     </section>
     <!--О нас-->
-    <section>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    <section class="about">
+        <ul class="list about-list">
+            <li class="about-item">
+                <h3 class="about-title">Внимание к деталям</h3>
+                <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <li class="about-item">
+                <h3 class="about-title">Пунктуальность</h3>
+                <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <li class="about-item">
+                <h3 class="about-title">Планирование</h3>
+                <p class="about-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <li class="about-item">
+                <h3 class="about-title">Современные технологии</h3>
+                <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
     <!--Чем занимаемся-->
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="./images/about_section_img_1.jpg" alt="Написание кода" width="370" height="294"></li>
-            <li><img src="./images/about_section_img_2.jpg" alt="Разробка мобильного приложения" width="370" height="294"></li>
-            <li><img src="./images/about_section_img_3.jpg" alt="Выбор цветовой палитры" width="370" height="294"></li>
+    <section class="work"> 
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="list work-list">
+            <li class="work-item"><img src="./images/about_section_img_1.jpg" alt="Написание кода" width="370" height="294"></li>
+            <li class="work-item"><img src="./images/about_section_img_2.jpg" alt="Разробка мобильного приложения" width="370" height="294"></li>
+            <li class="work-item"><img src="./images/about_section_img_3.jpg" alt="Выбор цветовой палитры" width="370" height="294"></li>
         </ul>
     </section>
     <!--Команда-->
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
+    <section class="team"> 
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list team-list">
+            <li class="team-item">
                 <img src="./images/team_img_1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3 class="team-people">Игорь Демьяненко</h3>
+                <p class="team-position">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./images/team_img_2.jpg" alt="Ольга Репина" width="270" height="260">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-people">Ольга Репина</h3>
+                <p class="team-position">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./images/team_img_3.jpg" alt="Николай Тарасов" width="270" height="260">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="team-people">Николай Тарасов</h3>
+                <p class="team-position">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
                 <img src="./images/team_img_4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <h3 class="team-people">Михаил Ермаков</h3>
+                <p class="team-position">UI Designer</p>
             </li>
 
         </ul>
@@ -94,20 +94,20 @@
     </section>
 </main>
 
-<footer>
-    <a href="">WebStudio</a>
-    <address>
-        <ul>
-        <li>
-           <a href="https://goo.gl/maps/kdyRsUSUZegwHqDn6" target="_blank" rel="noopener noreferrer">
+<footer class="footer">
+    <a href="" class="link footer-logo"><span class="logo-span">Web</span>Studio</a>
+    <address class="footer-address">
+        <ul class="list footer-list">
+        <li class="footer-item">
+           <a href="https://goo.gl/maps/kdyRsUSUZegwHqDn6" target="_blank" rel="noopener noreferrer"  class="link footer-map">
           г. Киев, пр-т Леси Украинки, 26
            </a>
         </li> 
-         <li>
-           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+         <li class="footer-item">
+           <a href="mailto:info@devstudio.com"  class="link footer-mail">info@devstudio.com</a>
          </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="footer-item">
+          <a href="tel:+380961111111"  class="link footer-tel">+38 096 111 11 11</a>
         </li>
         </ul>
       </address>
