--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link href="./css/styles.css" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,99 +12,99 @@
 </head>
 <body>
     <!--Шапка страницы-->
-<header>
-    <a href="">WebStudio</a>
-    <nav>
-        <ul>
-       <li><a href="">Студия</a></li>
-       <li><a href="">Портфолио</a></li>
-       <li><a href="">Контакты</a></li>
+    <header class="header">
+        <a  class="link header-logo" href="index.html"><span class="logo-span">Web</span>Studio</a>
+        <nav class="header-nav">
+            <ul class="list header-list">
+           <li class="header-item"><a href="index.html" class="link header-link">Студия</a></li>
+           <li class="header-item"><a href="portfolio.html" class="link header-link">Портфолио</a></li>
+           <li class="header-item"><a href="" class="link header-link">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="list header-contact-list">
+            <li class="header-contact-item"><a href=" mailto:info@devstudio.com" class="link header-contact-mail">info@devstudio.com</a></li>
+            <li class="header-contact-item"><a href="tel:+380961111111" class="link header-contact-tel">+38 096 111 11 11</a></li>
         </ul>
-    </nav>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-    
-</header>
+        
+    </header>
 <main>
     <!--Филтра-->
-    <section>
-        <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+    <section class="filter">
+        <ul class="list filter-list">
+            <li class="filter-item"><button type="button" class="filter-button">Все</button></li>
+            <li class="filter-item"><button type="button" class="filter-button">Веб-сайты</button></li>
+            <li class="filter-item"><button type="button" class="filter-button">Приложения</button></li>
+            <li class="filter-item"><button type="button" class="filter-button">Дизайн</button></li>
+            <li class="filter-item"><button type="button" class="filter-button">Маркетинг</button></li>
         </ul>
      </section>
      <!--Портфолио-->
-     <section>
-         <ul>
-             <li>
+     <section class="portfolio">
+         <ul class="list portfolio-list">
+             <li class="portfolio-item">
                  <img src="./images/portfolio_img_1.jpg" alt="Ноутбук с изображением команды" width="370" height="294">
-                 <h2>Технокряк</h2>
-                 <p>Веб-сайт</p>
+                 <h2 class="portfolio-project-name">Технокряк</h2>
+                 <p class="portfolio-project-class">Веб-сайт</p>
              </li>
-             <li>
+             <li class="portfolio-item">
                 <img src="./images/portfolio_img_2.jpg" alt="Постер New Orlean vs Golden Star"  width="370" height="294">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-project-name">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-project-class">Дизайн</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_3.jpg" alt="Логотип ресторана Seafood" width="370" height="294">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-project-name">Ресторан Seafood</h2>
+                <p class="portfolio-project-class">Приложение</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_4.jpg" alt="Наушники" width="370" height="294">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-project-name">Проект Prime</h2>
+                <p class="portfolio-project-class">Маркетинг</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_5.jpg" alt="Коробки" width="370" height="294">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-project-name">Проект Boxes</h2>
+                <p class="portfolio-project-class">Приложение</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_6.jpg" alt="Монитор с изображением Веб-сайта" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-project-name">Inspiration has no Borders</h2>
+                <p class="portfolio-project-class">Веб-сайт</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_7.jpg" alt="Издание Limited Edition" width="370" height="294">
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-project-name">Издание Limited Edition</h2>
+                <p class="portfolio-project-class">Дизайн</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_8.jpg" alt="Етикетка с надписью LABEL TAG" width="370" height="294">
-                <h2>Проект LAB</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-project-name">Проект LAB</h2>
+                <p class="portfolio-project-class">Дизайн</p>
             </li>
-            <li>
+            <li class="portfolio-item">
                 <img src="./images/portfolio_img_9.jpg" alt="Розробка приложения Growing Business" width="370" height="294">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-project-name">Growing Business</h2>
+                <p class="portfolio-project-class">Приложение</p>
             </li>
          </ul>
      </section>
 
 
 </main>
-<footer>
-    <a href="">WebStudio</a>
-    <address>
-        <ul>
-        <li>
-           <a href="https://goo.gl/maps/kdyRsUSUZegwHqDn6" target="_blank" rel="noopener noreferrer">
+<footer class="footer">
+    <a href="" class="link footer-logo"><span class="logo-span">Web</span>Studio</a>
+    <address class="footer-address">
+        <ul class="list footer-list">
+        <li class="footer-item">
+           <a href="https://goo.gl/maps/kdyRsUSUZegwHqDn6" target="_blank" rel="noopener noreferrer"  class="link footer-map">
           г. Киев, пр-т Леси Украинки, 26
            </a>
         </li> 
-         <li>
-           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+         <li class="footer-item">
+           <a href="mailto:info@devstudio.com"  class="link footer-mail">info@devstudio.com</a>
          </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="footer-item">
+          <a href="tel:+380961111111"  class="link footer-tel">+38 096 111 11 11</a>
         </li>
         </ul>
       </address>
